--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 anyio==3.6.1
 certifi==2022.12.7
+cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.1.3
+cryptography==39.0.0
 dnspython==2.2.1
 fastapi==0.81.0
 h11==0.13.0
 idna==3.3
+pycparser==2.21
 pydantic==1.9.2
+PyJWT==2.6.0
 pymongo==4.3.3
 python-decouple==3.6
 sniffio==1.2.0
